# spider-python

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.firecrawl.prod.yml  docker-compose.firecrawl.yml  docker-compose.n8n.prod.yml  docker-compose.prod.yml  docker-compose.twenty.prod.yml  docker-compose.yml
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 8a1f2b3c9d77_add_is_admin_and_seed_admin_user.py  983c4c2c644b_initial_schema_users_sessions_listings.py  a1b2c3d4e5f6_add_user_scrapers_table.py  b2c3d4e5f6a7_add_scraper_matches.py  c3d4e5f6a7b8_add_telegram_integration.py  c7a8e9f1b2d3_add_bolha_inactive_ads.py  d4e5f6a7b8c0_add_bolha_progressive_dashboard_tables.py  e1f2a3b4c5d6_add_bolha_ad_states.py  f2a3b4c5d6e7_add_bolha_ads_registry.py  g8h9i0j1k2l3_add_avtonet_ads_registry.py  h9i0j1k2l3m4_avtonet_pending_success_only.py  i0j1k2l3m4n5_avtonet_progressive_pipeline.py  j1k2l3m4n5o6_ad_registry_backfill_status.py  k2l3m4n5o6p7_add_listing_published_at.py  p7q8r9s0t1u2_add_user_activities.py  (+4 more)
backend/app/: avtonet_ads_serialize.py  bolha_ads_serialize.py  config.py  database.py  deps.py  listing_times.py  main.py  matcher_jobs.py  scraper_events.py  search_normalize.py  security.py  server_stats.py
backend/matcher/: match.py  worker.py
backend/scraper/: avtonet_fetch.py  base.py  firecrawl.py  http_retries.py  http_trace.py  page_fetch.py  publish_dates.py  scraperapi.py  worker.py
backend/tests/: test_bolha_classify.py  test_publish_dates.py  test_search_normalize.py
(+132 files in other folders)
