[project]
name = "spider-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "apscheduler>=3.11.2",
    "asyncpg>=0.31.0",
    "email-validator>=2.3.0",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "passlib[argon2]>=1.7.4",
    "psutil>=7.2.2",
    "psycopg>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-multipart>=0.0.28",
    "selectolax>=0.4.9",
    "sqlalchemy[asyncio]>=2.0.49",
    "uvicorn[standard]>=0.47.0",
]
